Observable entities for editing.