@@ -23,14 +23,14 @@
         <controlsfx.version>11.1.0</controlsfx.version>
         <ikonli.version>12.2.0</ikonli.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
-        <openjfx.version>17-ea+16</openjfx.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <openjfx.version>17.0.0.1</openjfx.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <record-builder-core.version>1.19</record-builder-core.version>
         <slf4j.version>2.0.0-alpha1</slf4j.version>
         <tinkar-core.version>1.0-SNAPSHOT</tinkar-core.version>
-        <tinkar-jpms-deps.version>1.0.1</tinkar-jpms-deps.version>
+        <tinkar-jpms-deps.version>1.0.2</tinkar-jpms-deps.version>
     </properties>
     <build>
         <plugins>
@@ -41,6 +41,11 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=org.hl7.komet.navigator</arg>
+                    </compilerArgs>
                     <fork>true</fork>
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
